Ignore Python venv and normalize line endings